[package]
name = "opencontroller-server"
version = "0.1.0"
authors = ["PJTSearch <pjtsignups@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.20"
structopt = "0.3.26"
envy = "0.4"
serde = "1.0"
serde_derive = "1.0"
protobuf = { git = "https://github.com/stepancheg/rust-protobuf.git" }
hotwatch = "0.4"
once_cell = "1"
tide = "0.16"
async-std = { version = "1.12.0", features = ["attributes"] }
env_logger = "0.9.0"
log = "0.4.17"
anyhow = "1.0"

[build-dependencies]
protoc-rust = { git = "https://github.com/stepancheg/rust-protobuf.git" }

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
surf = "2.3.2"